[gd_scene load_steps=8 format=3 uid="uid://cve4y2nbbwucg"]

[ext_resource type="Script" path="res://DeployGui.gd" id="1_1roly"]
[ext_resource type="Texture2D" uid="uid://u116jsmetni2" path="res://Assets/Backgrounds/Background_Orange.png" id="2_q1skw"]
[ext_resource type="PackedScene" uid="uid://bxp0hhpdubjky" path="res://detailed_room_info.tscn" id="6_27vo8"]
[ext_resource type="PackedScene" uid="uid://ct2wj06r38iul" path="res://upgrade_panel.tscn" id="11_q353u"]
[ext_resource type="PackedScene" uid="uid://c82hspet5gfvc" path="res://collection_panel.tscn" id="12_os86a"]
[ext_resource type="PackedScene" uid="uid://b5r70vpa8c172" path="res://DeployPanel.tscn" id="13_e71vw"]
[ext_resource type="Theme" uid="uid://d3xlkfucuimn7" path="res://Themes/MyTheme.tres" id="14_qdrbl"]

[node name="DeployGui" type="Node2D"]
script = ExtResource("1_1roly")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.72549, 0.72549, 0.72549, 1)
texture = ExtResource("2_q1skw")
centered = false

[node name="CollectionContainer" parent="." instance=ExtResource("12_os86a")]
position = Vector2(103.856, 44.537)
scale = Vector2(1.2, 1.2)

[node name="SelectedContainer" parent="." instance=ExtResource("11_q353u")]
position = Vector2(927.105, 439.882)

[node name="DeployContainer" parent="." instance=ExtResource("13_e71vw")]
position = Vector2(493.517, 890.537)

[node name="StartMission" type="Button" parent="."]
offset_left = 559.209
offset_top = 946.41
offset_right = 729.208
offset_bottom = 1036.41
theme = ExtResource("14_qdrbl")
theme_override_font_sizes/font_size = 20
text = "START
MISSION"

[node name="DetailedRoomInfo" parent="." instance=ExtResource("6_27vo8")]
position = Vector2(1234.75, 100.52)

[node name="BackButton" type="Button" parent="."]
offset_left = 7.14996
offset_top = 3.93852
offset_right = 177.15
offset_bottom = 93.9385
theme_override_font_sizes/font_size = 20
text = "Back"
